# ai4ce-gello-teleoperation-vla

./: .gitignore  .gitmodules  README.md  arena_grasp.xml  inspect_pkl.py  pyproject.toml  test_read.py  test_robot.ipynb
claude_plans/: typed-popping-alpaca.md  typed-popping-alpaca2.md
diffusion_policy/diffusion_policy/config/: train_gello_diffusion_unet_hybrid.yaml
diffusion_policy/diffusion_policy/config/task/: gello_image.yaml
diffusion_policy/diffusion_policy/dataset/: gello_image_dataset.py
diffusion_policy/diffusion_policy/workspace/: train_diffusion_unet_hybrid_workspace.py
experiments/: eval_policy.py  launch_camera_clients.py  launch_camera_nodes.py  launch_nodes.py  quick_run.py  run_env.py  visualize.py
gello/: env.py
gello/agents/: gello_agent.py
gello/data_utils/: conversion_utils.py  gello_diffusion.py  gello_rlds.py
gello/robots/: sim_robot_grasp.py  xarm_robot.py
gello/visualization/: logger.py  utils.py  visualizer.py
gello/zmq_core/: robot_node.py
scripts/: gello_get_offset.py  ur10e_calib.sh  ur10e_launch.sh
